[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/WhiteBarrier.gd" type="Script" id=1]
[ext_resource path="res://Scripts/MissionScene.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/MageRed.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/MissionHUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Prefabs/Boss.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/wizzard_m_run_anim_f1.png" type="Texture" id=6]
[ext_resource path="res://Scripts/MageWhite.gd" type="Script" id=7]
[ext_resource path="res://Sprites/white_barrier_handle.png" type="Texture" id=8]
[ext_resource path="res://Sprites/white_barrier_rect.png" type="Texture" id=9]
[ext_resource path="res://Prefabs/ChandelierSwinging.tscn" type="PackedScene" id=10]
[ext_resource path="res://Prefabs/DeadZoneArea2D.tscn" type="PackedScene" id=11]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 0, -77 )
b = Vector2( 0, 77 )

[sub_resource type="CircleShape2D" id=2]
radius = 23.0

[sub_resource type="CircleShape2D" id=3]
radius = 60.0

[node name="MissionScene" type="Node2D"]
script = ExtResource( 2 )
mission_number = 5

[node name="MissionHUDRoot" parent="." instance=ExtResource( 4 )]
title_path = NodePath("../../MissionScene/MissionHUDRoot/Title")

[node name="Success" parent="MissionHUDRoot" index="1"]
visible = false

[node name="DeadZoneArea2D" parent="." instance=ExtResource( 11 )]

[node name="MageRed" parent="." instance=ExtResource( 3 )]
position = Vector2( 622.387, 557.047 )
scale = Vector2( -1, 1 )

[node name="Boss" parent="." instance=ExtResource( 5 )]
position = Vector2( 367.607, 557.047 )

[node name="Chandelier" parent="." instance=ExtResource( 10 )]
position = Vector2( 367.607, 311.394 )

[node name="Chandelier2" parent="." instance=ExtResource( 10 )]
position = Vector2( 630, 311.394 )

[node name="Chandelier3" parent="." instance=ExtResource( 10 )]
position = Vector2( 910.305, 311.394 )

[node name="MageWhite" type="Node2D" parent="."]
position = Vector2( 965, 557.047 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="MageWhite"]
position = Vector2( 0, -22.51 )
scale = Vector2( -7.356, 7.356 )
texture = ExtResource( 6 )

[node name="WhiteBarrier" type="StaticBody2D" parent="MageWhite"]
position = Vector2( -84.1049, 27.4361 )
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MageWhite/WhiteBarrier"]
shape = SubResource( 1 )
one_way_collision_margin = 1.5

[node name="Sprite" type="Sprite" parent="MageWhite/WhiteBarrier"]
scale = Vector2( 0.419278, 0.419278 )
texture = ExtResource( 9 )

[node name="WhiteBarrierHandle" type="Area2D" parent="MageWhite"]
position = Vector2( -84.1048, -50.1303 )
scale = Vector2( 0.8, 0.8 )
collision_layer = 32
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MageWhite/WhiteBarrierHandle"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="MageWhite/WhiteBarrierHandle"]
modulate = Color( 1, 1, 1, 0.513726 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )

[node name="HurtBox" type="Area2D" parent="MageWhite"]
rotation = -3.14159
scale = Vector2( 1, -1 )
collision_mask = 6
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MageWhite/HurtBox"]
shape = SubResource( 3 )
disabled = true
__meta__ = {
"_edit_lock_": true
}
[connection signal="input_event" from="MageWhite/WhiteBarrierHandle" to="MageWhite" method="_on_WhiteBarrierHandle_input_event"]
[connection signal="body_entered" from="MageWhite/HurtBox" to="MageWhite" method="_on_HurtBox_body_entered"]

[editable path="MissionHUDRoot"]
